Fixed bugs and changed styling for followers modal cards - Follower count moved from right to under the name to accommodate follow button to be added in it's place - Follower count now says "5 Followers" instead of just "5" - Fixed some alignment issues with newsfeed
#fix #chore

--- a/public/stylesheets/followersModal.css
+++ b/public/stylesheets/followersModal.css
@@ -10,12 +10,12 @@
 
 .follower-summary-name {
     font-size: 1.25rem;
-    margin: 1rem;
+    /*margin: 1rem;*/
 }
 
 .follower-summary-follower-count {
     font-size: 1rem;
-    margin: 1rem;
+    /*margin: 1rem;*/
     text-align: right;
     font-family: "Roboto Condensed", sans-serif;
     color: #afafaf;
